case sensitivity of the classList attribute

--- a/html/dom/elements/global-attributes/classlist-casesensitive.html
+++ b/html/dom/elements/global-attributes/classlist-casesensitive.html
@@ -2,7 +2,7 @@
 <html>
 	<head class="test test">
 		<title class=" ">HTMLElement.classList in case-sensitive documents</title>
-		<link rel="" href="http://www.w3.org/TR/html5/global-attributes.html#dom-classlist">
+		<link rel="" href="http://www.w3.org/TR/html5/dom.html#dom-classlist">
 		<script type="text/javascript" src="/resources/testharness.js"></script>
 		<script type="text/javascript" src="/resources/testharnessreport.js"></script>
 		<style type="text/css">
