--- a/html-media-capture/idlharness.html
+++ b/html-media-capture/idlharness.html
@@ -2,17 +2,18 @@
 <html>
   <head>
     <meta charset='utf-8'>
-    <title>HTML Media Capture Test: idlharness</title>
+    <title>HTML Media Capture IDL tests</title>
     <link rel='author' title='Intel' href='http://www.intel.com/'>
     <link rel='help' href='http://www.w3.org/TR/html-media-capture/#conformance'>
     <link rel='help' href='http://www.w3.org/TR/html-media-capture/#the-capture-attribute'>
     <script src='/resources/testharness.js'></script>
     <script src='/resources/testharnessreport.js'></script>
-    <script src='/resources/webidl2/lib/webidl2.js'></script>
+    <script src='/resources/WebIDLParser.js'></script>
     <script src='/resources/idlharness.js'></script>
   </head>
   <body>
-    <p>This test validates the WebIDL included in the HTML Media Capture specification.</p>
+    <h1>HTML Media Capture IDL tests</h1>
+    <div id='log'></div>
 
     <pre id='untested_idl' style='display:none'>
       interface HTMLInputElement {
@@ -32,8 +33,6 @@
     <form style='display:none'>
       <input id='testElement' type='file' accept='image/*' capture>
     </form>
-
-    <div id='log'></div>
 
     <script>
       (function() {
