--- a/IndexedDB/idbfactory_open9.htm
+++ b/IndexedDB/idbfactory_open9.htm
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <title>IDBFactory.open() - errors in version argument</title>
-<script src="../Microsoft/support.js"></script>
+<script src="support.js"></script>
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
 <div id="log"></div>
