--- a/html/infrastructure/urls/resolving-urls/resolve-urls.html
+++ b/html/infrastructure/urls/resolving-urls/resolve-urls.html
@@ -3,6 +3,7 @@
 <title>HTML Test: Resolve URLs</title>
 <base id="base" target="_self">
 <link rel="author" title="Intel" href="http://www.intel.com/">
+<link rel="author" title="Wu Xiaojun" href="mailto:xiaojunx.a.wu@intel.com">
 <link rel="help" title="2.5.2 Resolving URLs" href="http://www.w3.org/html/wg/drafts/html/CR/infrastructure.html#resolving-urls">
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
@@ -40,14 +41,14 @@
   test(function () {
     a1.setAttribute("href", "http://www.example.com");
     assert_equals(a1.href, "http://www.example.com/", "The resolved URL should be 'http://www.example.com/'.");
-  }, "The url 'http://www.example.com' must be resolved to 'http://www.exam;ple.com/'");
+  }, "The url 'http://www.example.com' must be resolved to 'http://www.example.com/'");
   
   test(function () {
     a1.setAttribute("href", "http://www.ex\u0061mple.com");
     assert_equals(a1.href, "http://www.example.com/", "The resolved URL should be 'http://www.example.com/'.");
   }, "The url 'http://www.ex\\u0061mple.com' must be resolved to 'http://www.example.com/'");
 
-  //Base is an absolute URL
+  //Base URL is an absolute URL
   base.href = "http://www.example.com/test/";
   testData = [
     "/", "http://www.example.com/",
@@ -67,6 +68,6 @@
     test(function () {
       a1.setAttribute("href", testData[i]);
       assert_equals(a1.href, testData[i + 1], "The resolved URL should be " + testData[i + 1] + ".");      
-    }, "The url '" + testData[i].replace('\\', "") + "' must be resolved to '" + testData[i + 1] + "'");
+    }, "The url '" + testData[i] + "' must be resolved to '" + testData[i + 1] + "'");
   }
 </script>
