s/assert_notreached/assert_unreached/g

--- a/webstorage/event_local_key.html
+++ b/webstorage/event_local_key.html
@@ -7,7 +7,7 @@
   <script>
       function fail(msg) {
           t.step(function() {
-              assert_notreached(msg);
+              assert_unreached(msg);
           });
           t.done();
       }
