--- a/webstorage/event_session_newvalue.html
+++ b/webstorage/event_session_newvalue.html
@@ -7,7 +7,7 @@
   <script>
       function fail(msg) {
           t.step(function() {
-              assert_notreached(msg);
+              assert_unreached(msg);
           });
           t.done();
       }
