Update to resolve issues
1. Remove timeout
2. Modifie the asserts in the events tests
3. Correct the description in the loop test
4. Call the stop method in the start method test
5. Add a test to check the marquee's behavior is not alternate, etc.

Signed-off-by: xiaojunwu <xiaojunx.a.wu@intel.com>

--- a/html/obsolete/requirements-for-implementations/the-marquee-element-0/marquee-loop.html
+++ b/html/obsolete/requirements-for-implementations/the-marquee-element-0/marquee-loop.html
@@ -10,22 +10,18 @@
 <marquee id="test2" loop="-2">Test2</marquee>
 <marquee id="test3" loop="2">Test3</marquee>
 <script>
-  setup({explicit_done:true});
-
-  setTimeout(function() {test(function() {
+  test(function() {
     var mq = document.getElementById("test1");
     assert_equals(mq.loop, -1, "The value of loop should be -1.");
-  }, "marquee_loop_string");}, 1);
+  }, "marquee_loop_string");
 
-  setTimeout(function() {test(function() {
+  test(function() {
     var mq = document.getElementById("test2");
     assert_equals(mq.loop, -1, "The value of loop should be -1.");
-  }, "marquee_loop_less_than_1");}, 1);
+  }, "marquee_loop_less_than_1");
 
-  setTimeout(function() {test(function() {
+  test(function() {
     var mq = document.getElementById("test3");
-    assert_equals(mq.loop, 2, "The value of loop should be 10.");
-  }, "marquee_loop_normal");}, 1);
-
-  setTimeout(function(){done()}, 1);
+    assert_equals(mq.loop, 2, "The value of loop should be 2.");
+  }, "marquee_loop_normal");
 </script>
