--- a/html/obsolete/requirements-for-implementations/the-marquee-element-0/marquee-scrolldelay.html
+++ b/html/obsolete/requirements-for-implementations/the-marquee-element-0/marquee-scrolldelay.html
@@ -11,27 +11,23 @@
 <marquee id="test3" scrolldelay="1">Test3</marquee>
 <marquee id="test4" scrolldelay="100">Test4</marquee>
 <script>
-setup({explicit_done:true});
+  test(function() {
+    var mq = document.getElementById("test1");
+    assert_equals(mq.scrollDelay, 85, "The delay time should be 85ms.");
+  }, "The scrolldelay attribute is a string");
 
-setTimeout(function() {test(function() {
-  var mq = document.getElementById("test1");
-  assert_equals(mq.scrollDelay, 85, "The delay time should be 85ms.");
-}, "The scrolldelay attribute is a string");}, 1);
+  test(function() {
+    var mq = document.getElementById("test2");
+    assert_equals(mq.scrollDelay, 85, "The delay time should be 85ms.");
+  }, "The scrolldelay attribute is a negative");
 
-setTimeout(function() {test(function() {
-  var mq = document.getElementById("test2");
-  assert_equals(mq.scrollDelay, 85, "The delay time should be 85ms.");
-}, "The scrolldelay attribute is a negative");}, 1);
+  test(function() {
+    var mq = document.getElementById("test3");
+    assert_equals(mq.scrollDelay, 60, "The delay time should be 60ms.");
+  }, "The scrolldelay attribute is less than 60");
 
-setTimeout(function() {test(function() {
-  var mq = document.getElementById("test3");
-  assert_equals(mq.scrollDelay, 60, "The delay time should be 60ms.");
-}, "The scrolldelay attribute is less than 60");}, 1);
-
-setTimeout(function() {test(function() {
-  var mq = document.getElementById("test4");
-  assert_equals(mq.scrollDelay, 100, "The delay time should be 100ms.");
-}, "The scrolldelay attribute is greater than 60");}, 1);
-
-setTimeout(function(){done()}, 1);
+  test(function() {
+    var mq = document.getElementById("test4");
+    assert_equals(mq.scrollDelay, 100, "The delay time should be 100ms.");
+  }, "The scrolldelay attribute is greater than 60");
 </script>
