--- a/html/obsolete/requirements-for-implementations/the-marquee-element-0/marquee-start.html
+++ b/html/obsolete/requirements-for-implementations/the-marquee-element-0/marquee-start.html
@@ -5,15 +5,15 @@
 <link rel="help" href="http://www.whatwg.org/specs/web-apps/current-work/multipage/obsolete.html#the-marquee-element">
 <meta name="flags" content="interact">
 <meta name="assert" content="Check the start operation of HTMLMarqueeElement interface">
-<h2>Steps:<h2>
+<h2>Steps:</h2>
 <ol>
-  <li>Click the 'Start' button to start the marquee element</li>
+  <li>Click the 'Start' button to start the marquee element.</li>
 </ol>
 <h2>Expected result:</h2>
 <ul>
-  <li>The text "Test Marquee" start to move when the 'Start' button is clicked</li>
+  <li>The text "Test Marquee" start to move when the 'Start' button is clicked.</li>
 </ul>
-<input type="button" id="start" value="Start" onload="this.stop();"/>
+<input type="button" id="start" value="Start" />
 <marquee id="test">Test Marquee</marquee>
 <script>
   document.getElementById("test").stop();
