--- a/html/obsolete/requirements-for-implementations/the-marquee-element-0/marquee-stop.html
+++ b/html/obsolete/requirements-for-implementations/the-marquee-element-0/marquee-stop.html
@@ -5,13 +5,13 @@
 <link rel="help" href="http://www.whatwg.org/specs/web-apps/current-work/multipage/obsolete.html#the-marquee-element">
 <meta name="flags" content="interact">
 <meta name="assert" content="Check the stop operation of HTMLMarqueeElement interface">
-<h2>Steps:<h2>
+<h2>Steps:</h2>
 <ol>
-  <li>Click the 'Start' button to start the marquee element</li>
+  <li>Click the 'Start' button to start the marquee element.</li>
 </ol>
 <h2>Expected result:</h2>
 <ul>
-  <li>The text "Test Marquee" stop moving when the 'Stop' button is clicked</li>
+  <li>The text "Test Marquee" stop moving when the 'Stop' button is clicked.</li>
 </ul>
 <input type="button" id="stop" value="Stop" />
 <marquee id="test">Test Marquee</marquee>
