Test <base href>. Use blank.py instead of about:blank since the latter uses utf-8. Specify encoding in resource.py for types that would inherit.

--- a/html/infrastructure/urls/resolving-urls/windows-1251.html
+++ b/html/infrastructure/urls/resolving-urls/windows-1251.html
@@ -5,4 +5,4 @@
 <script src="/resources/testharnessreport.js"></script>
 <script src="/common/utils.js"></script>
 <div id=log></div>
-<script src="resolve-url.js?expected=error&pipe=sub"></script>
+<script src="resolve-url.js?encoding=windows-1251&pipe=sub"></script>
