--- a/IndexedDB/abort-in-initial-upgradeneeded.html
+++ b/IndexedDB/abort-in-initial-upgradeneeded.html
@@ -7,16 +7,15 @@
 
 <script>
 
-var db, open_rq = createdb(async_test(), undefined, 2)
+var db, open_rq = createdb(async_test(), undefined, 2);
 
 open_rq.onupgradeneeded = function(e) {
     db = e.target.result;
     assert_equals(db.version, 2);
     transaction = e.target.transaction;
-    transaction.oncomplete = fail(this, "unexpected transaction.complete")
+    transaction.oncomplete = fail(this, "unexpected transaction.complete");
     transaction.onabort = function(e) {
         assert_equals(e.target.db.version, 0);
-        assert_true(!!request.transaction, "request.transaction should be non-null");
     }
     db.onabort = function() {}
 
@@ -24,7 +23,7 @@ open_rq.onupgradeneeded = function(e) {
 }
 
 open_rq.onerror = function(e) {
-    assert_equals(!!e.target.result, true, "event.target.result should be non-null");
+    assert_true(!!e.target.result, "event.target.result should be non-null");
     assert_equals(db, e.target.result);
     assert_equals(open_rq, e.target);
     assert_equals(e.target.error.name, "AbortError");
