Addressing feedback from PR-324
This should address all of the feedback on GitHub and on list except:
-Feedback on consolidating tests like capture (Scott volunteered to do
this after other feedback is addressed)
-Feedback on the latest touch-action test cases
(https://github.com/InternetExplorer/web-platform-tests/commit/886568a445cded3b5aa01f0c8befb48e0534fed6)

We'll address the touch-action feedback soon.

--- a/pointerevents/capture.html
+++ b/pointerevents/capture.html
@@ -1,6 +1,7 @@
 	<!doctype html>
-	<title>Set/Release capture</title>
+	<html>
 	<head>
+	<title>Set/Release capture</title>
 	<meta name="viewport" content="width=device-width">
 	<script src="http://w3c-test.org/resources/testharness.js"></script>
 	</head>
@@ -67,6 +68,7 @@
 			log("lostpointercapture", document.getElementById('target0'));
 			captureButton.value = 'Set Capture';
 			isPointerCapture = false;
+			done();
 		});
 			
 		run();
@@ -212,3 +214,4 @@
 	}
 	</style>
 	</body>
+	</html>
