--- a/pointerevents/pointerevent_gotpointercapture_before_first_pointerevent.html
+++ b/pointerevents/pointerevent_gotpointercapture_before_first_pointerevent.html
@@ -1,132 +1,122 @@
 ﻿<!doctype html>
 <html>
-    <head>
-        <title>Pointer Event: gotpiontercapture is fired first.</title>
-        <meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
-        <link rel="author" title="Microsoft" href="http://www.microsoft.com/"/>
-        <meta name="assert" content="After setting capture, the gotpointercapture dispatched to the capturing element before any other event is fired."/>
+<head>
+    <title>Pointer Event: gotpiontercapture is fired first.</title>
+    <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
+    <link rel="author" title="Microsoft" href="http://www.microsoft.com/" />
+    <meta name="assert" content="After setting capture, the gotpointercapture dispatched to the capturing element before any other event is fired." />
 
-        <!-- http://w3c-test.org/resources/testharness.js -->
-	    <script src="http://w3c-test.org/resources/testharness.js"></script>
-		<!-- Additional helper script for common checks across event types -->
-        <script type="text/javascript" src="pointerevent_support.js"></script>
-        <script type="text/javascript">
-            setup({ explicit_done: true });
+    <!-- http://w3c-test.org/resources/testharness.js -->
+    <script src="http://w3c-test.org/resources/testharness.js"></script>
+    <!-- Additional helper script for common checks across event types -->
+    <script type="text/javascript" src="pointerevent_support.js"></script>
+    <script type="text/javascript">
 
-            var detected_pointertypes = {};
-            add_completion_callback(showPointerTypes);
+        var detected_pointertypes = {};
+        var test_pointerEvent = async_test("gotpointercapture event");  // set up test harness
+        // showPointerTypes is defined in pointerevent_support.js
+        // Requirements: the callbakc function will reference the test_pointerEvent object and
+        // will fail unless the async_test is created with the var name "test_pointerEvent".
+        add_completion_callback(showPointerTypes);
 
-            var target0;
-            var listener;
-            var pointerover_event;
-            var detected_pointerEvents = new Array();
-            var eventRcvd = false;
-            var test_pointerCapture;
+        var target0;
+        var listener;
+        var pointerover_event;
+        var detected_pointerEvents = new Array();
+        var eventRcvd = false;
 
-            function run() {
 
-                target0 = document.getElementById("target0");
-                target0.style["touchAction"] = "none";
-                listener = document.getElementById("listener");
+        function run() {
 
-                test_pointerCapture = async_test("gotpointercapture event");  // set up test harness
+            target0 = document.getElementById("target0");
+            target0.style["touchAction"] = "none";
+            listener = document.getElementById("listener");
 
-                // listen to all events
-                for (var i = 0; i < All_Pointer_Events.length; i++) {
+            // listen to all events
+            for (var i = 0; i < All_Pointer_Events.length; i++) {
 
-                    on_event(listener, All_Pointer_Events[i], function (event) {
-                        if (event.type == "gotpointercapture") {
-                            // if any events have been received with same pointerId before gotpointercapture, then fail
-                            var eventsRcvd_str = "";
-                            if (!eventRcvd) {
-                                eventsRcvd_str = "Events received before gotpointercapture: ";
-                                for (var i = 0; i < detected_pointerEvents.length; i++) {
-                                    eventsRcvd_str += detected_pointerEvents[i] +", ";
-                                }
-                            }
-                            test_pointerCapture.step(function () {
-                                assert_false(eventRcvd, "no other events should be received before gotpointercapture." + eventsRcvd_str);
-                                assert_equals(event.pointerId, pointerover_event.pointerId, "pointerID is same for pointerover and gotpointercapture");
-                            });
-
-                            detected_pointertypes[event.pointerType] = true;
-                            test_pointerCapture.done(); // complete test
-                        }
-                        else {
-                            if (pointerover_event.pointerId === event.pointerId) {
-                                detected_pointerEvents.push(event.type);
-                                eventRcvd = true;
+                on_event(listener, All_Pointer_Events[i], function (event) {
+                    if (event.type == "gotpointercapture") {
+                        check_PointerEvent(event);
+                        // if any events have been received with same pointerId before gotpointercapture, then fail
+                        var eventsRcvd_str = "";
+                        if (eventRcvd) {
+                            eventsRcvd_str = "Events received before gotpointercapture: ";
+                            for (var i = 0; i < detected_pointerEvents.length; i++) {
+                                eventsRcvd_str += detected_pointerEvents[i] + ", ";
                             }
                         }
-                    });
-                }
+                        test_pointerEvent.step(function () {
+                            assert_false(eventRcvd, "no other events should be received before gotpointercapture." + eventsRcvd_str);
+                            assert_equals(event.pointerId, pointerover_event.pointerId, "pointerID is same for pointerover and gotpointercapture");
+                        });
 
-                // set pointer capture
-                on_event(target0, "pointerover", function (event) {
-                    pointerover_event = event;
-                    listener.setPointerCapture(event.pointerId);
+                        detected_pointertypes[event.pointerType] = true;
+                        test_pointerEvent.done(); // complete test
+                    }
+                    else {
+                        if (pointerover_event.pointerId === event.pointerId) {
+                            detected_pointerEvents.push(event.type);
+                            eventRcvd = true;
+                        }
+                    }
                 });
             }
 
-            function showPointerTypes() {
-                var complete_notice = document.getElementById("complete-notice");
-                var pointertype_log = document.getElementById("pointertype-log");
-                var pointertypes = Object.keys(detected_pointertypes);
-                pointertype_log.innerHTML = pointertypes.length ? pointertypes.join(",") : "(none)";
-                if (test_pointerCapture.status == test_pointerCapture.NOTRUN
-                    || test_pointerCapture.status == test_pointerCapture.TIMEOUT) {
-                    complete_notice.innerHTML = "Test FAIL due to time out.  This is due to the browser not supporting pointer, or the manual steps were not run to completion.";
-                    complete_notice.style.background = "red";
-                }
-                complete_notice.style.display = "block";
-            }
+            // set pointer capture
+            on_event(target0, "pointerover", function (event) {
+                pointerover_event = event;
+                listener.setPointerCapture(event.pointerId);
+            });
+        }
         </script>
 
-        <style>
-            div {
-                margin: 0em;
-                padding: 2em;
-            }
+    <style>
+        div {
+            margin: 0em;
+            padding: 2em;
+        }
 
-            #target0 {
-                background: yellow;
-                border: 1px solid orange;
-            }
-            #listener {
-                background: orange;
-                border: 1px solid orange;
-                position: absolute;
-                top: -100px;
-            }
+        #target0 {
+            background: yellow;
+            border: 1px solid orange;
+        }
 
-            #complete-notice {
-                border: 1px solid #0a0;
-                display: none;
-            }
+        #listener {
+            background: orange;
+            border: 1px solid orange;
+            position: absolute;
+            top: -100px;
+        }
 
-            #pointertype-log {
-                font-weight: bold;
-            }
-        </style>
-    </head>
-    <body onload="run()">
-        <h1> Pointer Event: Dispatch gotpointercapture event</h1>
-        <h4> 
-            Test Description: 
+        #complete-notice {
+            border: 1px solid #0a0;
+            display: none;
+        }
+
+        #pointertype-log {
+            font-weight: bold;
+        }
+    </style>
+</head>
+<body onload="run()">
+    <h1>Pointer Event: Dispatch gotpointercapture event</h1>
+    <h4>Test Description: 
             After pointer capture is set for a pointer, and prior to dispatching the first event for the pointer, the gotpointercapture 
             event must be dispatched to the element that is receiving the pointer capture. 
         </h4>
-        <br />
-        <div id="target0">
-            Use the mouse, touch or pen to move over this box.
-        </div>
-        <div id="listener">Do not hover over or touch this element. </div>
-        <div id="complete-notice">
-            <p>Test complete:  Scroll to Summary to view Pass/Fail Results.</p>
-            <p>The following pointer types were detected: <span id="pointertype-log"></span>.</p>
-            <p>Would you like to <a href="#">run the tests again</a> with a different pointer type?</p>
-        </div>
+    <br />
+    <div id="target0">
+        Use the mouse, touch or pen to move over this box.
+       
+    </div>
+    <div id="listener">Do not hover over or touch this element. </div>
+    <div id="complete-notice">
+        <p>Test complete:  Scroll to Summary to view Pass/Fail Results.</p>
+        <p>The following pointer types were detected: <span id="pointertype-log"></span>.</p>
+        <p>Refresh the page to run the tests again with a different pointer type.</p>
+    </div>
 
-        <div id="log"></div>
-    </body>
+    <div id="log"></div>
+</body>
 </html>
