--- a/pointerevents/pointerevent_pointerEnter_does_not_bubble.html
+++ b/pointerevents/pointerevent_pointerEnter_does_not_bubble.html
@@ -12,60 +12,46 @@
         <script type="text/javascript" src="pointerevent_support.js"></script>
         <script type="text/javascript">
 
-            setup({ explicit_done: true });
-
             var detected_pointertypes = {};
+            var test_pointerEvent = async_test("pointerEnter event does not bubble");  // set up test harness
+            // showPointerTypes is defined in pointerevent_support.js
+            // Requirements: the callbakc function will reference the test_pointerEvent object and
+            // will fail unless the async_test is created with the var name "test_pointerEvent".
             add_completion_callback(showPointerTypes);
 
-            var target0;
-            var parent0;
-            var test_pointerEnter;
+            var pointerenter_event;
 
             function run() {
-                target0 = document.getElementById("target0");
-                parent0 = document.getElementById("parent0");
-                test_pointerEnter = async_test("pointerEnter event does not bubble");  // set up test harness
+                var target0 = document.getElementById("target0");
+                var parent0 = document.getElementById("parent0");
 
                 on_event(target0, "pointerenter", function (event) {
                     pointerenter_event = event;
 
                     check_PointerEvent(event);
-                    test_pointerEnter.step(function () {
+                    test_pointerEvent.step(function () {
                         assert_equals(event.type, "pointerenter", "pointer event received" + event.type);
-                        assert_false(event.bubbles, "pointerenter event.bublbes should be false: " + event.bubbles);
+                        assert_false(event.bubbles, "pointerenter event.bubbles should be false: " + event.bubbles);
                     });
 
-                    event.handled = false; // let it bubble
                     detected_pointertypes[event.pointerType] = true;
                 });
                 on_event(target0, "pointerout", function (event) {
-                    test_pointerEnter.step(function () {
+                    test_pointerEvent.step(function () {
                         assert_not_equals(pointerenter_event, null, "pointerout event was never received: ");
                     });
-                    test_pointerEnter.done(); // complete test
+                    test_pointerEvent.done(); // complete test
                 });
 
                 // parent 
                 on_event(parent0, "pointerenter", function (event) {
                     check_PointerEvent(event);
-                    test_pointerEnter.step(function () {
+                    test_pointerEvent.step(function () {
                         assert_equals(event.target.id, "parent0", "Recieved " + event.type + " in parent for " + event.target.id);
                     });
                 });
             }
 
-            function showPointerTypes() {
-                var complete_notice = document.getElementById("complete-notice");
-                var pointertype_log = document.getElementById("pointertype-log");
-                var pointertypes = Object.keys(detected_pointertypes);
-                pointertype_log.innerHTML = pointertypes.length ? pointertypes.join(",") : "(none)";
-                if (test_pointerEnter.status == test_pointerEnter.NOTRUN
-                    || test_pointerEnter.status == test_pointerEnter.TIMEOUT) {
-                    complete_notice.innerHTML = "Test FAIL due to time out.  This is due to the browser not supporting pointer, or the manual steps were not run to completion.";
-                    complete_notice.style.background = "red";
-                }
-                complete_notice.style.display = "block";
-            }
         </script>
         <style>
             div {
