--- a/pointerevents/pointerevent_pointerLeave_does_not_bubble.html
+++ b/pointerevents/pointerevent_pointerLeave_does_not_bubble.html
@@ -12,50 +12,35 @@
         <script type="text/javascript" src="pointerevent_support.js"></script>
         <script type="text/javascript">
 
-            setup({ explicit_done: true });
-
             var detected_pointertypes = {};
+            var test_pointerEvent = async_test("pointerLeave event does not bubble");  // set up test harness
+            // showPointerTypes is defined in pointerevent_support.js
+            // Requirements: the callbakc function will reference the test_pointerEvent object and
+            // will fail unless the async_test is created with the var name "test_pointerEvent".
             add_completion_callback(showPointerTypes);
 
-            var target0;
-            var parent0;
-            var test_pointerLeave;
-
             function run() {
-                target0 = document.getElementById("target0");
-                parent0 = document.getElementById("parent0");
-                test_pointerLeave = async_test("pointerLeave event does not bubble");  // set up test harness
+                var target0 = document.getElementById("target0");
+                var parent0 = document.getElementById("parent0");
 
                 on_event(target0, "pointerleave", function (event) {
                     pointerleave_event = event;
 
                     check_PointerEvent(event);
-                    test_pointerLeave.step(function () {
-                        assert_true(event.type == "pointerleave", "pointer event received" + event.type);
-                        assert_false(event.bubbles, "pointerleave event.bublbes should be false: " + event.bubbles);
+                    test_pointerEvent.step(function () {
+                        assert_true(event.type == "pointerleave", "pointer event receeved: " + event.type);
+                        assert_false(event.bubbles, "pointerleave event.bubbles should be false: " + event.bubbles);
                     });
 
                     detected_pointertypes[event.pointerType] = true;
                 });
 
                 on_event(parent0, "pointerleave", function (event) {
-                    test_pointerLeave.step(function () {
+                    test_pointerEvent.step(function () {
                         assert_equals(event.target.id, "parent0", "Recieved " + event.type + " in parent for " + event.target.id);
                     });
-                    test_pointerLeave.done(); // complete test
+                    test_pointerEvent.done(); // complete test
                 });
-            }
-
-            function showPointerTypes() {
-                var complete_notice = document.getElementById("complete-notice");
-                var pointertype_log = document.getElementById("pointertype-log");
-                var pointertypes = Object.keys(detected_pointertypes); pointertype_log.innerHTML = pointertypes.length ? pointertypes.join(",") : "(none)";
-                if (test_pointerLeave.status == test_pointerLeave.NOTRUN
-                    || test_pointerEnter.status == test_pointerLeave.TIMEOUT) {
-                    complete_notice.innerHTML = "Test FAIL due to time out.  This is due to the browser not supporting pointer, or the manual steps were not run to completion.";
-                    complete_notice.style.background = "red";
-                }
-                complete_notice.style.display = "block";
             }
         </script>
         <style>
