--- a/pointerevents/pointerevent_pointerOver.html
+++ b/pointerevents/pointerevent_pointerOver.html
@@ -12,42 +12,27 @@
         <script type="text/javascript" src="pointerevent_support.js"></script>
 		<script type="text/javascript">
 
-        setup({ explicit_done: true });
+		    var detected_pointertypes = {};
+		    var test_pointerEvent = async_test("pointerover is dispatched");  // set up test harness;
+		    // showPointerTypes is defined in pointerevent_support.js
+		    // Requirements: the callbakc function will reference the test_pointerEvent object and
+		    // will fail unless the async_test is created with the var name "test_pointerEvent".
+		    add_completion_callback(showPointerTypes);
 
-        var detected_pointertypes = {};
-        add_completion_callback(showPointerTypes);
+		    function run() {
+		        var target0 = document.getElementById("target0");
 
-        var target0;;
-        var test_pointerOver;
+		        on_event(target0, "pointerover", function (event) {
+		            test_pointerEvent.step(function () {
+		                check_PointerEvent(event);
+		                assert_equals(event.type, "pointerover", "Pointer Event received");
+		            });
 
-        function run() {
-            target0 = document.getElementById("target0");
-            test_pointerOver = async_test("pointerover is dispatched");  // set up test harness
+		            detected_pointertypes[event.pointerType] = true;
+		            test_pointerEvent.done(); // complete tes
+		        });
+		    }
 
-            // set pointer capture
-            on_event(target0, "pointerover", function (event) {
-                
-                test_pointerOver.step(function () {
-                    check_PointerEvent(event);
-                    assert_true(event.type == "pointerover", "pointerover received");
-                });
-
-                detected_pointertypes[event.pointerType] = true;
-                test_pointerOver.done(); // complete tes
-            });
-        }
-
-        function showPointerTypes() {
-            var complete_notice = document.getElementById("complete-notice");
-            var pointertype_log = document.getElementById("pointertype-log");
-            var pointertypes = Object.keys(detected_pointertypes); pointertype_log.innerHTML = pointertypes.length ? pointertypes.join(",") : "(none)";
-            if (test_pointerOver.status == test_pointerOver.NOTRUN
-                || test_pointerOver.status == test_pointerOver.TIMEOUT) {
-                complete_notice.innerHTML = "Test FAIL due to time out.  This is due to the browser not supporting pointer, or the manual steps were not run to completion.";
-                complete_notice.style.background = "red";
-            }
-            complete_notice.style.display = "block";
-        }
 		</script>
 
 		<style>
@@ -84,7 +69,7 @@
 		<div id="complete-notice">
 			<p>Test complete:  Scroll to Summary to view Pass/Fail Results.</p>
 			<p>The following pointer types were detected: <span id="pointertype-log"></span>.</p>
-			<p>Refresh the page to run the tests again with a different pointer type?</p>
+			<p>Refresh the page to run the tests again with a different pointer type.</p>
 		</div>
 
 		<div id="log"></div>
