--- a/pointerevents/pointerevent_pointerType_pen.html
+++ b/pointerevents/pointerevent_pointerType_pen.html
@@ -12,46 +12,32 @@
         <script type="text/javascript" src="pointerevent_support.js"></script>
 		<script type="text/javascript">
 
-        setup({ explicit_done: true });
+		    var detected_pointertypes = {};
+		    var test_pointerEvent = async_test("pointer event has pointerType as pen");  // set up test harness
+		    // showPointerTypes is defined in pointerevent_support.js
+		    // Requirements: the callbakc function will reference the test_pointerEvent object and
+		    // will fail unless the async_test is created with the var name "test_pointerEvent".
+		    add_completion_callback(showPointerTypes);
 
-        var detected_pointertypes = {};
-        add_completion_callback(showPointerTypes);
+		    function eventHandler(event) {
+		        check_PointerEvent(event);
+		        test_pointerEvent.step(function () {
+		            assert_equals(event.pointerType, "pen", "Verify event.pointerType is 'pen'.");
+		        });
+		        detected_pointertypes[event.pointerType] = true;
 
-        var test_pointerEvent_pen;
+		        if (event.type == "pointerup") {
+		            test_pointerEvent.done(); // complete test
+		        }
+		    }
 
-        function eventHandler(event) {
-            //check_PointerEvent(event);
-            test_pointerEvent_pen.step(function () {
-                assert_true(event.pointerType == "pen", "Event with pointerType:" + event.pointerType + " received.  Expected event.pointerType to be 'pen'.");
-            });
-            detected_pointertypes[event.pointerType] = true;
-
-            if (event.type == "pointerleave") {
-                test_pointerEvent_pen.done(); // complete test
-            }
-        }
-
-        function showPointerTypes() {
-            var complete_notice = document.getElementById("complete-notice");
-            var pointertype_log = document.getElementById("pointertype-log");
-            var pointertypes = Object.keys(detected_pointertypes); pointertype_log.innerHTML = pointertypes.length ? pointertypes.join(",") : "(none)";
-            if (test_pointerEvent_pen.status == test_pointerEvent_pen.NOTRUN
-                || test_pointerEvent_pen.status == test_pointerEvent_pen.TIMEOUT) {
-                complete_notice.innerHTML = "Test FAIL due to time out.  This is due to the browser not supporting pointer, or the manual steps were not run to completion.";
-                complete_notice.style.background = "red";
-            }
-            complete_notice.style.display = "block";
-        }
-
-        function run() {
-            var target0 = document.getElementById("target0");
-            test_pointerEvent_pen = async_test("pointer event have pointerType as pen");  // set up test harness
-
-            // listen for all events.
-            for (var i = 0; i < All_Pointer_Events.length; i++) {
-                on_event(target0, All_Pointer_Events[i], eventHandler);
-            }
-        }
+		    function run() {
+		        var target0 = document.getElementById("target0");
+		        // listen for all events.
+		        for (var i = 0; i < All_Pointer_Events.length; i++) {
+		            on_event(target0, All_Pointer_Events[i], eventHandler);
+		        }
+		    }
 		</script>
 
 		<style>
