--- a/pointerevents/pointerevent_pointerType_touch.html
+++ b/pointerevents/pointerevent_pointerType_touch.html
@@ -12,41 +12,28 @@
         <script type="text/javascript" src="pointerevent_support.js"></script>
 		<script type="text/javascript">
 
-			setup({ explicit_done: true });
-
 			var detected_pointertypes = {};
+			var test_pointerEvent = async_test("pointer event has pointerType as touch");  // set up test harness
+			// showPointerTypes is defined in pointerevent_support.js
+			// Requirements: the callbakc function will reference the test_pointerEvent object and
+			// will fail unless the async_test is created with the var name "test_pointerEvent".
 			add_completion_callback(showPointerTypes);
 
-			var test_pointerEvent_touch;
-			
-
 			function eventHandler(event) {
-				//check_PointerEvent(event);
-				test_pointerEvent_touch.step(function () {
-					assert_true(event.pointerType == "touch", "Event with pointerType:" + event.pointerType + " received.  Expected event.pointerType to be 'touch'.");
+				check_PointerEvent(event);
+				test_pointerEvent.step(function () {
+				    assert_equals(event.pointerType, "touch", "Verify event.pointerType is 'touch'.");
 				});
 				detected_pointertypes[event.pointerType] = true;
 
-				if (event.type == "pointerleave") {
-					test_pointerEvent_touch.done(); // complete test
+				if (event.type == "pointerup") {
+					test_pointerEvent.done(); // complete test
 				}
-			}
-
-			function showPointerTypes() {
-				var complete_notice = document.getElementById("complete-notice");
-				var pointertype_log = document.getElementById("pointertype-log");
-				var pointertypes = Object.keys(detected_pointertypes); pointertype_log.innerHTML = pointertypes.length ? pointertypes.join(",") : "(none)";
-				if (test_pointerEvent_touch.status == test_pointerEvent_touch.NOTRUN
-					|| test_pointerEvent_touch.status == test_pointerEvent_touch.TIMEOUT) {
-					complete_notice.innerHTML = "Test FAIL due to time out.  This is due to the browser not supporting pointer, or the manual steps were not run to completion.";
-					complete_notice.style.background = "red";
-				}
-				complete_notice.style.display = "block";
 			}
 
 			function run() {
 				var target0 = document.getElementById("target0");
-				test_pointerEvent_touch = async_test("pointer event have pointerType as touch");  // set up test harness
+				
 
 				// listen for all events.
 				for (var i = 0; i < All_Pointer_Events.length; i++) {
