--- a/pointerevents/pointerevent_releasePointerCapture_invalid_pointerId.html
+++ b/pointerevents/pointerevent_releasePointerCapture_invalid_pointerId.html
@@ -16,61 +16,44 @@
         <script type="text/javascript" src="pointerevent_support.js"></script>
         <script type="text/javascript">
 
-            setup({ explicit_done: true });
-
             var detected_pointertypes = {};
+            var test_pointerEvent = async_test("releasePointerCapture: DOMException InvalidPointerId");  // set up test harness
+            // showPointerTypes is defined in pointerevent_support.js
+            // Requirements: the callbakc function will reference the test_pointerEvent object and
+            // will fail unless the async_test is created with the var name "test_pointerEvent".
             add_completion_callback(showPointerTypes);
 
-
             var invalid_pointerId = 314159265358973923;
-            var target0;
-            var listener;
-            var test_pointerCapture_invalidPointerId;
 
             function run() {
 
-                target0 = document.getElementById("target0");
+                var target0 = document.getElementById("target0");
                 target0.style["touchAction"] = "none";
-                listener = document.getElementById("complete-notice");
+                var listener = document.getElementById("complete-notice");
 
-                test_pointerCapture_invalidPointerId = async_test("releasePointerCapture: DOMException InvalidPointerId");  // set up test harness
-
-                // release pointer capture with an invalid id
+                // try to release pointer capture with an invalid id
                 on_event(listener, "pointermove", function (event) {
                     detected_pointertypes[event.pointerType] = true;
                     
                     try {
-                        listener.setPointerCapture(invalid_pointerId);
+                        listener.releasePointerCapture(invalid_pointerId);
 
-                        test(function () {
-                            assert_true(false, "DOMException not thrown.");
-                        }, "InvalidPointerId should have been thrown");
+                        test_pointerEvent.step(function () {
+                            assert_true(false, "DOMException not thrown. Expected: InvalidPointerId should have been thrown");
+                        });
                     } catch (e) {
-                        test_pointerCapture_invalidPointerId.step(function () {
-                            assert_true(e.message == "InvalidPointerId", e.message + " is the correct DOMException");
+                        test_pointerEvent.step(function () {
+                            assert_true(e.name == "InvalidPointerId", "DOMException should be InvalidPointerId");
                         });
                     }
-
-                    test_pointerCapture_invalidPointerId.done(); // complete test
+                    test_pointerEvent.done(); // complete test
                 });
 
                 // set pointer capture
-                on_event(target0, "pointerover", function (event) {
+                on_event(target0, "pointerdown", function (event) {
                     detected_pointertypes[event.pointerType] = true;
                     listener.setPointerCapture(event.pointerId);
                 });
-            }
-
-            function showPointerTypes() {
-                var complete_notice = document.getElementById("complete-notice");
-                var pointertype_log = document.getElementById("pointertype-log");
-                var pointertypes = Object.keys(detected_pointertypes); pointertype_log.innerHTML = pointertypes.length ? pointertypes.join(",") : "(none)";
-                if (test_pointerCapture_invalidPointerId.status == test_pointerCapture_invalidPointerId.NOTRUN
-                    || test_pointerCapture_invalidPointerId.status == test_pointerCapture_invalidPointerId.TIMEOUT) {
-                    complete_notice.innerHTML = "Test FAIL due to time out.  This is due to the browser not supporting pointer, or the manual steps were not run to completion.";
-                    complete_notice.style.background = "red";
-                }
-                complete_notice.style.display = "block";
             }
         </script>
 
@@ -104,12 +87,12 @@
         </h4>
         <br />
         <div id="target0">
-            Use the mouse, touch or pen to move over this box.
+            Use the mouse, touch or pen to move over or contact this box.
         </div>
         <div id="complete-notice">
             <p>Test complete:  Scroll to Summary to view Pass/Fail Results.</p>
             <p>The following pointer types were detected: <span id="pointertype-log"></span>.</p>
-            <p>Would you like to <a href="#">run the tests again</a> with a different pointer type?</p>
+            <p>Refresh the page to run the tests again with a different pointer type.</p>
         </div>
         <div id="log"></div>
     </body>
