--- a/pointerevents/pointerevent_setPointerCapture_invalid_pointerId.html
+++ b/pointerevents/pointerevent_setPointerCapture_invalid_pointerId.html
@@ -1,106 +1,88 @@
 ﻿<!doctype html>
 <html>
-    <head>
-        <title>Pointer Event: gotPiontercapture is fired first.</title>
-        <meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
-        <link rel="author" title="Microsoft" href="http://www.microsoft.com/"/>
-        <link rel="help" href="http://www.w3.org/wiki/PointerEvents/TestAssertions">
+<head>
+    <title>Pointer Event: gotPiontercapture is fired first.</title>
+    <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
+    <link rel="author" title="Microsoft" href="http://www.microsoft.com/" />
+    <link rel="help" href="http://www.w3.org/wiki/PointerEvents/TestAssertions">
 
-        <meta name="assert" content="When the setPointerCapture method is invoked, if the provided pointerId value does not match any of the active pointers, a DOMException with the name InvalidPointerId must be thrown."/>
+    <meta name="assert" content="When the setPointerCapture method is invoked, if the provided pointerId value does not match any of the active pointers, a DOMException with the name InvalidPointerId must be thrown." />
 
-        <!-- http://w3c-test.org/resources/testharness.js -->
-	    <script src="http://w3c-test.org/resources/testharness.js"></script>
-		<!-- Additional helper script for common checks across event types -->
-        <script type="text/javascript" src="pointerevent_support.js"></script>
-        <script type="text/javascript">
-            setup({ explicit_done: true });
+    <!-- http://w3c-test.org/resources/testharness.js -->
+    <script src="http://w3c-test.org/resources/testharness.js"></script>
+    <!-- Additional helper script for common checks across event types -->
+    <script type="text/javascript" src="pointerevent_support.js"></script>
+    <script type="text/javascript">
 
-            var detected_pointertypes = {};
-            add_completion_callback(showPointerTypes);
+        var detected_pointertypes = {};
+        var test_pointerEvent = async_test("setPointerCapture: DOMException InvalidPointerId");  // set up test harness
+        // showPointerTypes is defined in pointerevent_support.js
+        // Requirements: the callbakc function will reference the test_pointerEvent object and
+        // will fail unless the async_test is created with the var name "test_pointerEvent".
+        add_completion_callback(showPointerTypes);
 
+        var INVALID_POINTERID = -39548;
 
-            var INVALID_POINTERID = -39548;
-            var target0;
-            var listener;
-            var test_pointerCapture_invalidPointerId;
+        function run() {
 
-            function run () {
+            var target0 = document.getElementById("target0");
+            target0.style["touchAction"] = "none";
+            var listener = document.getElementById("complete-notice");
 
-                target0 = document.getElementById("target0");
-                target0.style["touchAction"] = "none";
-                listener = document.getElementById("complete-notice");
+            on_event(target0, "pointerdown", function (event) {
+                detected_pointertypes[event.pointerType] = true;
 
-                test_pointerCapture_invalidPointerId = async_test("setPointerCapture: DOMException InvalidPointerId");  // set up test harness
+                try {
+                    listener.setPointerCapture(INVALID_POINTERID);
 
-                // add listener to pointerdown
-                on_event(target0, pointerPrefix["pointerdown"], function (event) {
-                    check_PointerEvent(event);
-                    detected_pointertypes[event.pointerType] = true;
-
-                    
-                    try {
-                        listener.setPointerCapture(INVALID_POINTERID);
-
-                        test_pointerCapture_invalidPointerId.step(function () {
-                            assert_true(false,  "DOMException: InvalidPointerId should have been thrown.");
-                        });
-                    } catch (e) {
-                        test_pointerCapture_invalidPointerId.step(function () {
-                            assert_equals(e.message, "InvalidPointerId" , e.message + " is the correct DOMException");
-                        });
-                    }
-
-                    test_pointerCapture_invalidPointerId.done(); // complete test
-                });
-            }
-
-            function showPointerTypes() {
-                var complete_notice = document.getElementById("complete-notice");
-                var pointertype_log = document.getElementById("pointertype-log");
-                var pointertypes = Object.keys(detected_pointertypes); pointertype_log.innerHTML = pointertypes.length ? pointertypes.join(",") : "(none)";
-
-                if (test_pointerCapture_invalidPointerId.status == test_pointerCapture_invalidPointerId.NOTRUN
-                     || test_pointerCapture_invalidPointerId.status == test_pointerCapture_invalidPointerId.TIMEOUT) {
-                    complete_notice.innerHTML = "Test FAIL due to time out.  This is due to the browser not supporting pointer, or the manual steps were not run to completion.";
-                    complete_notice.style.background = "red";
+                    test_pointerEvent.step(function () {
+                        assert_true(false, "DOMException: InvalidPointerId should have been thrown.");
+                    });
+                } catch (e) {
+                    test_pointerEvent.step(function () {
+                        assert_equals(e.name, "InvalidPointerId", "DOMException should be InvalidPointerId");
+                    });
                 }
-                complete_notice.style.display = "block";
-            }
+
+                test_pointerEvent.done(); // complete test
+
+                listener.setPointerCapture(event.pointerId); // set correct pointer capture for releaseCapture test
+            });
+        }
         </script>
 
-        <style>
-            #target0 {
-                margin: 0em;
-                padding: 2em;
-                background: yellow;
-                border: 1px solid orange;
-            }
+    <style>
+        #target0 {
+            margin: 0em;
+            padding: 2em;
+            background: yellow;
+            border: 1px solid orange;
+        }
 
-            #complete-notice {
-                border: 1px solid #0a0;
-                display: none;
-            }
+        #complete-notice {
+            border: 1px solid #0a0;
+            display: none;
+        }
 
-            #pointertype-log {
-                font-weight: bold;
-            }
-        </style>
-    </head>
-    <body onload="run()">
-        <h1> Pointer Event: DOMException InvalidPointerId</h1>
-        <h4> 
-            Test Description: 
+        #pointertype-log {
+            font-weight: bold;
+        }
+    </style>
+</head>
+<body onload="run()">
+    <h1>Pointer Event: DOMException InvalidPointerId</h1>
+    <h4>Test Description: 
             When the setPointerCapture method is invoked, if the provided pointerId value does not match any of the active pointers, a DOMException with the name InvalidPointerId must be thrown. 
         </h4>
-        <br />
-        <div id="target0">
-            Use the mouse, touch or pen to contact this box.
-        </div>
-        <div id="complete-notice">
-            <p>Test complete:  Scroll to Summary to view Pass/Fail Results.</p>
-            <p>The following pointer types were detected: <span id="pointertype-log"></span>.</p>
-            <p>Would you like to <a href="#">run the tests again</a> with a different pointer type?</p>
-        </div>
-        <div id="log"></div>
-    </body>
+    <br />
+    <div id="target0">
+        Use the mouse, touch or pen to contact this box.
+    </div>
+    <div id="complete-notice">
+        <p>Test complete:  Scroll to Summary to view Pass/Fail Results.</p>
+        <p>The following pointer types were detected: <span id="pointertype-log"></span>.</p>
+        <p>Refresh the page to run the tests again with a different pointer type.</p>
+    </div>
+    <div id="log"></div>
+</body>
 </html>
