--- a/pointerevents/pointerout.html
+++ b/pointerevents/pointerout.html
@@ -1,73 +1,64 @@
-	<!doctype html>
-	<title>Pointerout</title>
-	<head>
-	<meta name="viewport" content="width=device-width">
-	<script src="http://w3c-test.org/resources/testharness.js"></script>
-	</head>
+<!doctype html>
+<html>
+<head>
+    <title>Pointerout</title>
+    <meta name="viewport" content="width=device-width">
+    <script src="http://w3c-test.org/resources/testharness.js"></script>
+    <!-- Additional helper script for common checks across event types -->
+    <script type="text/javascript" src="pointerevent_support.js"></script>
+</head>
 
-	<body onload="run()">
-	<h2>PointerOut</h2>
-	<h4>Test Description: This test checks if pointerout event triggers. Put your mouse over the black rectangle and then move it out of the rectangle boundaries. If you are using touchscreen tap the black rectangle and then tap at any place outside. </h4>
-	
-	<p>	
-	<div id="target0" style="background:black"></div>	
-	<script>
-	var timeout = 0;
-	var eventTested = false;
+<body onload="run()">
+    <h2>PointerOut</h2>
+    <h4>Test Description: This test checks if pointerout event triggers. Put your mouse over the black rectangle and then move it out of the rectangle boundaries. If you are using touchscreen tap the black rectangle. </h4>
 
-	var detected_pointertypes = {};
+    <div id="target0" style="background: black"></div>
+    <script>
 
-	setup({ explicit_done: true });
-	add_completion_callback(showPointerTypes);
-	
-	function run() {
-		var target0 = document.getElementById("target0");
-		var test_pointerout = async_test("pointerout event received");
-		var pointerover_event;
+        var test_pointerEvent = async_test("pointerout event received");
+        // showPointerTypes is defined in pointerevent_support.js
+        // Requirements: the callbakc function will reference the test_pointerEvent object and
+        // will fail unless the async_test is created with the var name "test_pointerEvent".
+        add_completion_callback(showPointerTypes);
 
-		on_event(target0, "pointerover", function(event) {
-			pointerover_event = event;
-			detected_pointertypes[ event.pointerType ] = true;
-		});
+        var eventTested = false;
+        var detected_pointertypes = {};
 
-		on_event(target0, "pointerout", function (event) {
-		    if (eventTested == false) {
-		        detected_pointertypes[event.pointerType] = true;
+        function run() {
+            var target0 = document.getElementById("target0");
 
-		        test_pointerout.done();
-				eventTested = true;
-		    }
-		});
-	}
-	
-	function showPointerTypes() {
-		var complete_notice = document.getElementById("complete-notice");
-		var pointertype_log = document.getElementById("pointertype-log");
-		var pointertypes = Object.keys(detected_pointertypes);
-		pointertype_log.innerHTML = pointertypes.length ?
-			pointertypes.join(",") : "(none)";
-		complete_notice.style.display = "block";
-	}
-	</script>
-	<style>
-		div {
-			margin: 0em;
-			padding: 2em;
-		}
-		#complete-notice {
-			background: #afa;
-			border: 1px solid #0a0;
-			display: none;
-		}
-		#pointertype-log {
-			font-weight: bold;
-		}
-	</style>
-	
-	<h1>Pointer Events pointerout Tests</h1>
-	<div id="complete-notice">
-		<p>The following pointer types were detected: <span id="pointertype-log"></span>.</p>
-		<p>Would you like to <a href="#">run the tests again</a> with a different pointer type?</p>
-	</div>
-	<div id="log"></div>
-	</body>
+            on_event(target0, "pointerout", function (event) {
+                if (eventTested == false) {
+                    detected_pointertypes[event.pointerType] = true;
+                    eventTested = true;
+                    check_PointerEvent(event);
+                    test_pointerEvent.done();
+                }
+            });
+        }
+
+    </script>
+    <style>
+        div {
+            margin: 0em;
+            padding: 2em;
+        }
+
+        #complete-notice {
+            background: #afa;
+            border: 1px solid #0a0;
+            display: none;
+        }
+
+        #pointertype-log {
+            font-weight: bold;
+        }
+    </style>
+
+    <h1>Pointer Events pointerout Tests</h1>
+    <div id="complete-notice">
+        <p>The following pointer types were detected: <span id="pointertype-log"></span>.</p>
+        <p>Refresh the page to run the tests again with a different pointer type.</p>
+    </div>
+    <div id="log"></div>
+</body>
