Update base_multiple_manual.html to automatical testing

--- a/html/semantics/document-metadata/the-base-element/example2.html
+++ b/html/semantics/document-metadata/the-base-element/example2.html
@@ -2,4 +2,4 @@
 <meta charset="utf-8">
 <title>Example</title>
 <link rel="author" title="Intel" href="http://www.intel.com/">
-<div>PASS</div>
+<div id="d1">PASS</div>
